# obi-one

./: .coverage.Js-MacBook-Pro.local.13659.XpXMqaox  .env.run-local  .env.run-local.bak  .env.test-docker  .env.test-local  .git-blame-ignore-revs  .gitattributes  .gitignore  02_morphology.ipynb  ADVANTAGES.md  CLAUDE.md  Dockerfile  EXAMPLE_USER_PROJECT.md  GOALS.md  GOALS_ORIGINAL.md  Makefile  Notebook_repository.md  PLATFORM.md  PYDANTIC_SCHEMA.md  README.md  SCHEMA_PYDANTIC.md  _test_campaign.py  circuit_extraction_example.ipynb  circuit_simulations_example.ipynb  connectivity_metrics_example.ipynb  docker-compose.run.yml  docker-compose.test.yml  example.ipynb  example.py  full_schema.json  local.json  mkdocs.yml  new_mixin_test.ipynb  obi-one-architecture.drawio  pyproject.toml  recreate_objects_from_json_example.ipynb  refactor_notes.txt  requirements.txt  ruff_output.txt  staging.json  (+1 more)
.github/workflows/: check-docs.yml  docker-image.yml  publish-pypi.yml  publish.yml  run-tests.yml
Cellular/analyse_single_cell_sim/: README.md  analysis_info.json  analysis_notebook.ipynb
Cellular/compare_inhibition_types/: README.md  analysis_info.json  analysis_notebook.ipynb
Cellular/count_prox_vs_dist_length/: analysis_notebook.ipynb
Cellular/emodels/: README.md
Circuit/adjacency_matrix/: analysis_info.json  analysis_notebook.ipynb
Circuit/circuit_composition/: README.md  analysis_info.json  analysis_notebook.ipynb
Circuit/connectivity_matrix/: analysis_info.json  analysis_notebook.ipynb
Circuit/hippocampus/: feedforward_inhibition.ipynb  theta.ipynb
Circuit/hippocampus_ffi/: analysis_info.json  analysis_notebook.ipynb
Circuit/hippocampus_theta/: README.md  analysis_info.json  analysis_notebook.ipynb
Circuit/simulation_campaign/: README.md  analysis_notebook.ipynb
Circuit/synapse_properties_matrix/: analysis_info.json  analysis_notebook.ipynb
OBI API/: setup.py
OBI API/obi/: stimulus.py  timestamps.py
OBI API/obi.egg-info/: SOURCES.txt
OBI-Code-Templates/: README.md
OBI-Database-and-Persistence/: README.md
OBI-Interface/: README.md
OBI-Libraries/: README.md
OBI-Platform/: README.md
OBI-Project-Examples/: README.md
OBI-Project-Examples/rat_nbS1/: README.md
OBI-SDK/: MODELING_LIBRARY.md
OBI-SDK/core/: run_aws.py
OBI_API/obi/: multi_template.py
OLD/: GOALS.md
app/: __init__.py  __main__.py  _check_service_deps.py  application.py  config.py  errors.py  mappings.py  sentry.py  types.py
app/dependencies/: accounting.py  auth.py  callback.py  compute_cell.py  entitysdk.py  file.py  launch_system.py  launchsystem.py
app/endpoints/: check_if_entity_can_be_made_public.py  circuit_connectivity.py  circuit_customization.py  circuit_extraction.py  circuit_properties.py  circuit_registration.py  circuit_visualization.py  config_validation.py  contributor.py  convert_morphology_to_registered_mesh.py  count_scan_coordinates.py  declared_endpoints.py  electrical_cell_recording_properties.py  ephys_metrics.py  extracellular_locations.py  generated_endpoints.py  graphql.py  ion_channel_properties.py  job.py  licenses.py  mesh_registration.py  mesh_validation.py  morphology_metrics.py  morphology_metrics_calculation.py  morphology_section_types.py  morphology_template.json  morphology_validation.py  mtypes.py  multi_values.py  nwb_validation.py  publication.py  scan_config.py  subject.py  subject_data.py  task.py  task_launch.py  validate_electrophysiology_protocol_nwb.py
app/schemas/: accounting.py  base.py  callback.py  circuit_visualization.py  cluster.py  contributor.py  job.py  morphology_section_types.py  publication.py  subject.py  task.py  visualization.py
app/services/: accounting.py  circuit_extraction.py  circuit_visualization.py  contributor_metadata.py  doi_metadata.py  file.py  job.py  morphology.py  morphology_registration.py  morphology_section_types.py  task.py  validator.py
app/utils/: db_sdk.py  redact.py
circuit_launch_upload/: circuit_extraction_example.ipynb  nodeset_generator.py
docs/: api.md  index.md  scircuit.md  scs.md
docs/gui-definition-spec/: gui-definition.md
examples/: afferent_synapse_set_example.ipynb  analyse_campaign_entity.ipynb  basic_connetivity_plots_example.ipynb  basic_connetivity_plots_example_small_MC.ipynb  benchmark_viewer.ipynb  call_service_example.py  circuit_extraction_example.ipynb  circuit_metrics_example.ipynb  circuit_simulations_example.ipynb  circuit_simulations_example_basic.ipynb  circuit_simulations_with_manipulations_example.ipynb  connectivity_matrix_extraction_example.ipynb  deserialize_example.ipynb  discriminator_example.ipynb  entitysdk_authentication_error.ipynb  entitysdk_circuit_simulations.ipynb  entitysdk_example.ipynb  example_volumetric_node_set.ipynb  generate_synapse_cluster_locations.ipynb  launch_service_example.py  microns_conversion_example.ipynb  morphology_containerization.ipynb  morphology_locations_example.ipynb  morphology_metrics_example.ipynb  motif_neuron_set_example.ipynb  multiservice_launch.py  neuron_set_example.ipynb  new_form.ipynb  recreate_objects_from_json_example.ipynb  simulation_schema_testing.ipynb  spike_stimulus_example.ipynb  test_endpoints.ipynb
examples/A_service_and_entitycore/: deserialize_example.ipynb  (+2 more)
gui-definition-spec/: gui-definition.md  model_identifier.json  reference.json  root_block_schema.json
misc_old/: ADVANTAGES.md  CORE_OPERATIONS.md  README.md
obi/: __init__.py  circuit_grouping.py  extracellular_location_sets.py  intracellular_location_sets.py  neuron_sets.py  recording.py  simulation.py  simulations.py  stimulus.py  synapse_sets.py  timestamps.py
obi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
obi2/: __init__.py  campaign.py  multi_template.py  simulations.py  stimulus.py  template.py
obi_one/: __init__.py  config.py  types.py
scripts/: block_meta_schema.json  example_simulations_form.json  meta_schema.json  openapi.json  schema_copy.json  validate_block.py  validate_schema.py
tests/: conftest.py  test_deserialization.py  test_example.py  test_simulation_campaign.py  utils.py
(+1570 files in other folders)
