[project]
name = "obi"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [

    # PYDANTIC
    "pydantic>=2.10.6",

    # CIRCUIT EXTRACTION
    # "brainbuilder",
    "brainbuilder @ git+https://github.com/openbraininstitute/brainbuilder.git@split_popul_fix",

    # CONNECTIVITY
    "Connectome-Utilities",
    "cmake",
    "connectome-analysis>=1.0.1",

    # FAST API SERVICE
    "fastapi",
    "uvicorn",
    "starlette",

    # JUPYTER
    "jupyter", 
    "notebook", 
    "jupyterlab",
    "ipykernel",

    # DATABASE
    "sqlalchemy",

    # BLUEETL
    "blueetl"

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["obi"]